syntax = "proto3";

option csharp_namespace = "api_consumer.grpc.services.consumer.Protos";

package consumer;

service ConsumerService {

    rpc List (Empty) returns (ConsumersGet);
	rpc Get (Request) returns (ConsumerGet);
    rpc Insert (ClientePost) returns (Empty);
    rpc Update (ClientePut) returns (Empty);
    rpc Delete (Request) returns (Empty);
}

message Empty {

}

message Request {

  int32 Id = 1;

}

message ConsumerPost {
  
  int32 IdConsumer = 1;
  string Name = 2;
  string Surname = 3;
  string Cpf = 4;
  string Genre = 5;

}	

message ConsumerPut {
  
  int32  Id = 1;
  int32 IdAddress = 2;
  string Name = 3;
  string Surname = 4;
  string Cpf = 5;
  string Genre = 6;

}	

message ConsumerGet {
  
  int32  Id = 1;
  int32 IdAddress = 2;
  string Name = 3;
  string Surname = 4;
  string Cpf = 5;
  string Genre = 6;

}	

message ConsumersGet {

  repeated ConsumerGet items = 1;

}